# FAQ-CHATBOT

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: filestructure.md  instructions.md
app/: __init__.py  api.py  config.py  db.py  indexing.py  llm.py  main.py  memory.py  models.py  retrieval.py
data/raw/: faqs.json
scripts/: preprocess.py
streamlit_app/: __init__.py  app.py  ui.py
